<resources>
    <string name="VersionNo">3.2</string>
    <string name="Version">Version</string>
    <string name="hello" translatable="false">aSQLiteManager</string>
    <string name="app_name" translatable="false">aSQLite Manager</string>
    <string name="AboutHeader">About aSQLiteManager</string>
    <string name="AboutText">Andsens SQLite manager. Manage your Android 
        databases</string>
    <string name="WWW">Check for updates at:\nhttp://asqlitemanager.sourceforge.net</string>
    <string name="AAA">Read more about aSQLiteManager at:\nhttp://aaa.andsen.dk/aSQLiteManager.html</string>
    <string name="MAIL">Comments welcome on:\nandroid41cv@gmail.com</string>
    <string name="OpdenDB">Open Database</string>
    <string name="About">About</string>
    <string name="Location">Location</string>
    <string name="View">View</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="DBTables">Tables</string>
    <string name="DBViews">Views</string>
    <string name="DBIndexs">Index</string>
    <string name="DBTable">Table</string>
    <string name="DBView">View</string>
    <string name="DBIndex">Index</string>
    <string name="DBField">Field</string>
    <string name="DBData">Data</string>
    <string name="DBSQL">SQL</string>
    <string name="OpenDatabase">Open database</string>
    <string name="NoSDCard">No SDCard available</string>
    <string name="OK">OK</string>
    <string name="Path">Path:</string>
    <string name="Database">Database</string>
    <string name="DBQuery">Query</string>
    <string name="Run">Run</string>
    <string name="DBFields">Fields</string>
    <string name="PgUp">PgUp</string>
    <string name="PgDn">PgDn</string>
    <string name="Option">Options</string>
    <string name="Help">Help</string>
    <string name="HelpHeader">aSQLiteManager help</string>
    <string name="PageSize">Page size</string>
    <string name="PressMenuSQL">Press menu to build SQL</string>
    <string name="PageSizeText">Number of lines to retrieve when paging data</string>
    <string name="Open">Open</string>
    <string name="NoResult">No result</string>
    <string name="NewDB">New database</string>
    <string name="NewDBSDCard">New database on SDCard</string>
    <string name="NewDBPath">Path to new database</string>
    <string name="AutoIndex">SQLite does not store auto index definitions</string>
    <string name="Message">Message</string>
    <string name="Error">Error</string>
    <string name="NoFileName">Must at least give a file name</string>
    <string name="DBQueryType">Query Type</string>
    <string name="OnClickedMess">You clicked on this SQLite database:</string>
    <string name="OnClickedOpen">Open database with\naSQLiteManager</string>
    <string name="RecentSQL">Recent SQL</string>
    <string name="Transaction">Transaction</string>
    <string name="BeginTransaction">Begin transaction</string>
    <string name="Commit">Commit</string>
    <string name="Rollback">Rollback</string>
    <string name="InTransaction">In transaction</string>
    <string name="UpdatesCommitted">Updates committed</string>
    <string name="UpdatesRolledback">Updates rolled back</string>
    <string name="NothingToRolledback">Nothing to rolledback</string>
    <string name="NothingToCommit">Nothing to commit</string>
    <string name="IsNotADatabase">is not a database</string>
    <string name="Export">Export database</string>
    <string name="Restore">Restore database</string>
    <string name="Cancel">Cancel</string>
    <string name="ExportData">Export</string>
    <string name="NoExportToRestore">No export to restore</string>
    <string name="AlwaysJustOpen">Always open database</string>
    <string name="Reset">Reset</string>
    <string name="OpenSQL">Open SQL file</string>
    <string name="Working">Working</string>
    <string name="ReadingScript">Reading script</string>
    <string name="ExecuteStatement">Execute statement</string>
    <string name="MustNotBeEmpty">Must not be empty</string>
    <string name="ShowAtStartUp">Show welcome at startup</string>
    <string name="Welcome">Welcome to aSQLiteManager</string>
    <string name="DumpTable">Dump table</string>
    <string name="TableDumpep">Table %s dumped</string>
    <string name="DumpFailed">Ups! dump failed</string>
    <string name="ErrorNothingToExport">Nothing to export!</string>
    <string name="DataExported">Data exported</string>
    <string name="DataBaseExported">Database exported</string>
    <string name="DataBaseRestored">Database restored</string>
    <string name="Patience">Patience - might take a while</string>
    <string name="Recently">Recently opened</string>
    <string name="RecentlyTxt">No. of recently opened databases to save</string>
    <string name="ROSystemTable">sqlite_master is a read only system table</string>
    <string name="CouldNotCreate">Could not create:</string>
    <string name="SystemFolder">System folder</string>
    <string name="SystemFolderText">If your phone is rootet you can edit system databases with aSQLiteManager using aShell</string>
    <string name="DBInfo">DB Info</string>
    <string name="DatabaseInfo">Database info.</string>
    <string name="DatabaseExists">already exists!</string>
		<string name="RateMsg">
			You have now used aSQLiteManager in more than a week and at least 10 times.
			\nIf you like using it, please support it by a good rating.
			\nYou can also donate a small amount of money (from the home
			page). It will be used to improve the program.
			\nThanks for your support!</string>
		<string name="Rate">Rate</string>
		<string name="Later">I\'ll do it next time</string>
		<string name="NoThanks">I have done it</string>
		<string name="EditDeleteRow">Edit or delete this row #</string>
		<string name="Delete">Delete</string>
		<string name="CopiedToClipboard">Text copied to clip board</string>
		<string name="InsertNewRow">Insert new row</string>
		<string name="EditRow">Edit row</string>
		<string name="Edit">Edit</string>
		<string name="New">New</string>
		<string name="First">First</string>
		<string name="Last">Last</string>
		<string name="Filter">Filter</string>
		<string name="EnterWhere">Enter where clause (no where)</string>
		<string name="StrangeErr">If you can reproduce this error please tell me
		    by mail how to provoke it ;-)
		    \nYou can also also use aLogViewer to extract extra informations
		    form the system log to help me find out what is wrong.</string>
		<string name="NotAnArror">Not an error</string>
		<string name="Normal">Normal</string>
		<string name="Root">Root</string>
    <string name="RootNeeded">Root mode needed to access</string>
    <string name="RootWarning">No Root access</string>
    <string name="EnterRoot">Entering a root catalog be careful:</string>
    <string name="LeavingRoot">Leaving root catalog:</string>
    <string name="RootEdit1">Do you want to open a copy of</string>
    <string name="RootEdit2">system file?</string>
    <string name="Warning">Warning</string>
    <string name="CommitChanges">Commit changes?</string>
    <string name="CommitChangesTo">Commit changes to:</string>
    <string name="OneMoreToExit">Press once more to exit!</string>
    <string name="FilterHint">Enter filter</string>
    <string name="Clear">Clear</string>
    <string name="EnterFilter">Enter filter</string>
    <string name="SuShell">Location of su executable</string>
    <string name="SuShellText">The su executable can be located in different places inside or outside of your path</string>
    <string name="PauseTitle">Pause in msec</string>
    <string name="PauseText">Time to wait after starting to copy database before opening it</string>
    <string name="RootNotFound">Root shell binary not found in standard location
        (or phone not rooted). You can define root shell location in configuration.</string>
    <string name="RootFilePickerTxt">Use root file picker</string>
    <string name="RootFilePickerMsg">Use aShell root file picker to access system databases on rooted phones</string>
    <string name="BasicConfiguration">Basic configuration</string>
    <string name="SuperUserPreferences">Super user preferences - Experimental</string>
    <string name="DebugPreferences">Debugging preferences</string>
    <string name="LoggingTitle">Logging</string>
    <string name="LoggingText">Enable logging to retrieve debugging informations</string>
    <string name="RootUseWarning">Editing system databases is experimental and potential
        dangerous - you might destroy data.
        \n\nDo not alter system databases unless you know what you are doing!
        \n\nTake care!\n</string>
    <string name="ShowRootWarning">Got it - stop telling me</string>
    <string name="CreateTable">New Table</string>
    <string name="AddField">Add Field</string>
    <string name="CreateField">Create field</string>
    <string name="MustEnterFieldName">You must enter a field name!</string>
    <string name="MustEnterTableNameAndOneField">You must enter a table name and at least one field!</string>
    <string name="SQLPreferences">SQLPreferences</string>
    <string name="CannotDeleteAutoIndex">Cannot delete auto generated index</string>
    <string name="DeleteIndex">Delete index</string>
    <string name="DeleteView">Delete view</string>
    <string name="DeleteTable">Delete table</string>
    <string name="CannotDeleteSysTable">Cannot delete system table</string>
    <string name="DropItem">Drop item?</string>
    <string name="IndexDefCopied">Index definition copied to clip board</string>
    <string name="DescAutoIncError">DESC and AutoInc must not both be checked although the manual says otherwise</string>
    <string name="FontSizeText">Font size to use data list</string>
    <string name="FontSize">Font size</string>
    <string name="DefaultModeText">Default view in table viewer</string>
    <string name="DefaultMode">Default view</string>
    <string name="MainScreenInPortrait">Main screen in portrait</string>
    <string name="MainScreenInPortraitText">Always keep main screen in portrait (after restart)</string>
    <string name="FKLists">FK lists</string>
    <string name="FKListsText">Use lists when editing FK fields</string>
    <string name="SaveSQL">Save SQL</string>
    <string name="SaveSQLText">Save SQL in database</string>
    <string name="ForeignKeys">Enable foreign keys</string>
    <string name="ForeignKeysText">Turn on foreign key constraints</string>
    <string name="WelcomeMsg">aSQLiteManager is a free open source
  	  SQLite manager / front end for Android devices.
      \n\nNew in this version (3.2):
			\n\n•	Select where to create a new database using a directory picker – thanks to Malte Heizelmann
			\n•	You get tips about what is possible in the different parts of the program
			\n•	Foreign key selection lists now show a string representation of the records not just the FK fields. The field that the foreign key refers to MUST be the primary key in the referenced table
			\n•	More checking in create table wizard
			\n•	Hopefully back on the French version of Google Play (I had placed an unfinished French translation in a wrong place)
			\n•	French translation – thanks to Jean-Luc Rostini + Nicolas Gourdon
			\n•	Italian translation – thanks to Giuseppe Tumino https://play.google.com/store/apps/developer?id=Giuseppe+Tumino
			\n•	Catalan translation – thanks to Paco Rivière
			\n•	Brazilian translation – thanks to Leandro Lopes
			\n•	Spanish translation – thanks to Gonzalo Rodriguez
			\n•	Several bug fixes – thanks for reporting!
      \n\nFor a description of all features check:
      \naaa.andsen.dk/aSQLiteManager.html
      \n\nComments, bug reports and feature requests are welcome.
      just drop me a mail at:
      \nandroid41cv@gmail.com
      \n\nAnd thanks to those of you who report bugs instead of complaining ;-) 
      \n\nHope you enjoy the app!
      \n\nMartin
    </string>
</resources>