<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
 <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="Database viewer comming here"
    android:id="@+id/DatabaseToView"
    />
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  >
  <Button
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/DBTables"
    android:id="@+id/Tables"
  />
  <Button
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/DBViews"
    android:id="@+id/Views"
  />
  <Button
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/DBIndexs"
    android:id="@+id/Index"
  />
  <Button
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/DBQuery"
    android:id="@+id/Query"
  />
  </LinearLayout>
  <LinearLayout
    android:id="@+id/QueryFrame"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="right">
    <EditText
      android:layout_height="wrap_content" 
      android:text="@string/SQLStm"
      android:id="@+id/SQLStm"
      android:layout_width="wrap_content"/>
    <Button
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      android:text="@string/Run"
      android:id="@+id/Run"
      android:gravity="right"
      android:layout_gravity="right"/>
  </LinearLayout>
  <ListView android:id="@+id/LVList"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    />      
</LinearLayout>
