<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
		android:padding="5dp"
    >
  <EditText 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
	  android:id="@+id/newTabTabName"
	  android:hint="Table name"
      />
	<ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="2"
			android:scrollbars="vertical"
			android:scrollbarAlwaysDrawVerticalTrack="true"
			android:scrollbarFadeDuration="1000000"
			android:padding="5dp"
	    >
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
	    android:id="@+id/newTabSV"
	    android:orientation="vertical"
      >
    </LinearLayout>
	</ScrollView>
  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
 		<Button
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/OK"
	    android:layout_weight="1"
	    android:id="@+id/newTabOK"
 		  />     
 		<Button
	    android:layout_width="wrap_content"
  	  android:layout_height="wrap_content"
			android:text="@string/Cancel"
 	    android:layout_weight="1"
 	    android:id="@+id/newTabCancel"
 		  />     
 		<Button
	    android:layout_width="wrap_content"
  	  android:layout_height="wrap_content"
			android:text="@string/AddField"
 	    android:layout_weight="1"
 	    android:id="@+id/newTabAddField"
 		  />     
 	</LinearLayout>
</LinearLayout>